# finick

./: .envrc  .gitignore  Cargo.toml  devenv.nix  devenv.yaml  flake.nix  shell.nix
.devenv/: changelog-cache.json  nix-eval-cache.db-shm  nix-eval-cache.db-wal
.devenv/gc/: changelog-json-devenv-config-changelog-json
.github/workflows/: rust.yml
apps/files/: Cargo.toml
apps/files/src/: main.rs
finickctl/: Cargo.toml
finickctl/src/: main.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs  ty.rs
libs/ipc/: Cargo.toml
libs/ipc/src/: lib.rs  main.rs
scan/: package-lock.json  package.json
scan/src/: App.vue
scan/src-tauri/: Cargo.toml  tauri.conf.json
scan/src-tauri/capabilities/: default.json
scan/src-tauri/src/: lib.rs  main.rs
services/index/: Cargo.toml
services/index/src/: lib.rs  main.rs  ty.rs
systemd/: f-index.service
