[package]
name = "ipsea"
version = "1.1.2"
edition = "2021"
description = "easy little ipc library"
repository = "https://github.com/tascord/finick/"
license = "MIT"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.25"
futures = "0.3.31"
tokio = { version = "1.47.0", features = ["full"] }
pretty_env_logger = "0.5.0"

[dev-dependencies]
