[package]
name = "scan"
version = "0.1.0"
edition = "2021"

[lib]
name = "scan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { path = "../../libs/config" }
walkdir = "2.5.0"
rayon = "1.10.0"
rusqlite = "0.33.0"
mountpoints = "0.2.1"
