[package]
name = "scan"
version = "0.1.0"
edition = "2021"

[lib]
name = "scan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { path = "../../libs/config" }
ipsea = { path = "../../libs/ipc" }
index = { path = "../../services/index" }
pretty_env_logger = "0.5.0"
gtk = "0.18.2"
gdk = "0.18.2"
tauri-plugin-fs = "2"
