[package]
name = "index"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
rusqlite = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
config = { path = "../../libs/config" }
ipsea = { path = "../../libs/ipc" }
notify = "8.0.0"
sled = "0.34.7"
pretty_env_logger = "0.5.0"
r2d2_sqlite = "0.26.0"
r2d2 = "0.8.10"
image = "0.25.5"
